# greppy

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  mypy.yml  python_ci_linux.yml
doc-source/: Source.rst  api.rst  conf.py  contributing.rst  index.rst  license.rst  requirements.txt  usage.rst
doc-source/_templates/sidebar/: navigation.html
greppy/: __init__.py  __main__.py
tests/: conftest.py  requirements.txt  test_cli.py  test_greppy.py
tests/test_cli_/: test_greppy__typing_____Dict_.yml  test_greppy_collections____Sequence_Mapping_Counter__.yml  test_greppy_non_utf8.yml  test_greppy_simple.yml  test_greppy_summary_Dict_.yml  test_greppy_summary__typing_____Dict_.yml  test_greppy_summary_collections____Sequence_Mapping_Counter__.yml
tests/test_greppy_/: test_greppy_CustomType_.yml  test_greppy_Dict_.yml  test_greppy__typing_____Dict_.yml  test_greppy_simple.yml  test_greppy_summary_Dict_.yml  test_greppy_summary__typing_____Dict_.yml  test_greppy_summary_collections____Sequence_Mapping_Counter__.yml
